--- a/styles/main.css
+++ b/styles/main.css
@@ -24,6 +24,12 @@ body {
   border: 5px solid rgb(0, 0, 0);
 }
 
+.image-js-blog {
+  margin: 20px;
+  max-width: 100%;
+  height: auto;
+}
+
 .image-wrapper {
   display: flex;
   justify-content: center;
